--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,19 @@
     "name": "bo_ship_bot",
     "version": "1.0.0",
     "main": "app.js",
+    "license": "MIT",
     "scripts": {
       "start": "node app.js"
     },
     "dependencies": {
-      "express": "^4.18.0",
-      "dotenv": "^16.0.0",
-      "axios": "^1.7.2",
-      "body-parser": "^1.20.0",
+      "express": "^4.18.2",
+      "dotenv": "^16.3.1",
+      "axios": "^1.6.2",
+      "body-parser": "^1.20.2",
       "cors": "^2.8.5",
-      "mongoose": "^7.0.0",
-      "@google-cloud/vision": "^3.3.0",
-      "@google-cloud/text-to-speech": "^4.5.1",
-      "openai": "^4.18.4"
+      "mongoose": "^8.0.3",
+      "@google-cloud/vision": "^4.0.1",
+      "@google-cloud/text-to-speech": "^5.0.0",
+      "openai": "^4.24.1"
     }
-  }
+}
