--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "mysql2": "^3.14.1",
-    "openai": "^4.24.1"
+    "openai": "^4.24.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
